<resources>
    <string name="app_name">RegistroUnivalle-A2</string>
    <string name="hint_nombre">Nombre:</string>
    <string name="hint_apellido">Apellido:</string>
    <string name="hint_email">Email:</string>
    <string name="hint_celular">Celular:</string>
    <string name="hint_codigo">Codigo:</string>
    <string name="sw_estudiante">es Estudiante?</string>
    <string name="btn_registrar">Registrar</string>
</resources>